# salesforce_tools

./: .gitignore  README.md  pyproject.toml  test_xml_parsing.py
arroyo_salesforce/: auth.py  bulk.py  bulk_models.py  oauth_server.py  salesforce.py  util.py
salesforce_tools/: __init__.py  auth.py  bulk.py  bulk_models.py  client.py  oauth_server.py  util.py
salesforce_tools/async_sf/: __init__.py  bulk.py  client.py  metadata.py
salesforce_tools/models/: __init__.py  bulk.py  bulk_xsd.py  model_factory.py  sf_dataclasses.py
tests/: mock_responses.py  test_auth.py  test_bulk.py  test_data.sqlite
