[tool.poetry]
name = "arroyo.salesforce"
version = "0.1.0"
description = ""
authors = ["David Manuel <david@dcmanjr.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
Flask = "^2.2.1"
xmltodict = "^0.13.0"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
viztracer = "^0.15.3"
pytest-faker = "^2.0.0"
pytest = "^7.1.2"
Faker = "^13.15.1"
StringGenerator = "^0.4.4"
pytest-mock = "^3.8.2"
requests-mock = "^1.9.3"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
