[tool.poetry]
name = "salesforce-tools"
version = "1.0.0"
description = "Salesforce API tools"
authors = ["David Manuel <david@dcmanjr.com>"]
license = "MIT"
homepage = "https://github.com/dacmanj/salesforce-tools"
repository = "https://github.com/dacmanj/salesforce-tools"

[tool.poetry.dependencies]
python = ">=3.9,<4"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
xmltodict = "^0.13.0"
flatten-json = "^0.1.13"
PyJWT = "^2.4.0"
authlib = "^1.1.0"
httpx = "^0.27.0"
pydantic = "^2.4.2"
python-dateutil = "^2.8.2"
dataclasses-json = "^0.6.3"

[tool.poetry.dev-dependencies]
viztracer = "^0.15.6"
pytest-faker = "^2.0.0"
pytest = "^7.2.1"
Faker = "^13.15.1"
StringGenerator = "^0.4.4"
pytest-mock = "^3.8.2"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
